파일 업로드 적용 전

--- a/real/index.html
+++ b/real/index.html
@@ -28,7 +28,7 @@
     <div>
       <div class="main-container">
         <div class="editor-container editor-container_document-editor editor-container_include-style" id="editor-container">
-          <div class="editor-container__menu-bar" id="editor-menu-bar"> </div>
+          <!-- <div class="editor-container__menu-bar" id="editor-menu-bar"> </div> -->
           <div class="editor-container__toolbar" id="editor-toolbar"></div>
           <div class="editor-container__editor-wrapper">
             <div class="editor-container__editor"><div id="editor"></div></div>
